--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ h1 {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-
+ul{
+    text-align: center;
+}
 .recipe {
     background-color: rgb(147, 180, 89);
     color: rgb(26, 25, 25);
     font-weight: 200;
     font-size: large;
     font-family: Arial, Helvetica, sans-serif;
-    text-align:justify;
 }
