--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
 h1 {
     background-color: rgb(155, 114, 194);
     color: antiquewhite;
@@ -5,9 +10,11 @@ h1 {
     font-size: 50px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    margin: 50px;
 }
 ul{
     text-align: center;
+    padding: 5px 10px;
 }
 .recipe {
     background-color: rgb(147, 180, 89);
@@ -15,4 +22,5 @@ ul{
     font-weight: 200;
     font-size: large;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 5px 10px;
 }
